tcb/assets/sass/custom.scss
$breakpoint-medium: 772px;

figure {
    text-align: center;

    >figcaption {
        font-style: normal;
        font-weight: 500;
    }
}

.content-button {
    display: flex;
    align-items: center;
    font-weight: 500;
    color: black;
    justify-content: center;
}

.lab-icon {
    border: 1px dashed #3DE9F2;
    border-radius: 100%;
    padding: 3px;
    margin-right: 3px;
    position: relative;
    display: inline-flex;
    font-size: 0;

    &:before {
        display: block;
        content: '';
        background-image: url(/lib/img/lab.svg);
        height: 2rem;
        width: 2rem;
    }

    &:hover:after {
        background: rgba(0, 0, 0, .8);
        top: 0;
        font-weight: 100;
        font-style: normal;
        font-size: 1rem;
        color: #fff;
        content: attr(data-title);
        left: 100%;
        padding: 0 5px 0;
        position: absolute;
        white-space: nowrap;
    }
}

.email-icon {
    @keyframes anim-glow {
        0% {
            box-shadow: 0 0 rgba(#3DE9F2, 1);
        }

        100% {
            box-shadow: 0 0 5px 10px transparent;
        }
    }

    &:before {
        animation: anim-glow 3s ease infinite;
        border-radius: 100%;
        display: block;
        content: "";
        background: url(/lib/img/email.svg) center center no-repeat;
        background-size: 32px;
        width: 40px;
        height: 40px;
        margin-top: 5px;
    }
}

.p-link--logo {
    &:before {
        background: url('/lib/img/logo.svg') center center no-repeat;
        background-size: 70px 70px;
        display: block;
        width: 70px;
        height: 70px;
        content: "";
        margin-right: 5px;
        float: left;
    }
}

.p-icon--subscribe {
    &:before {
        background: url('/lib/img/mouse.svg') center center no-repeat;
        background-size: 25px 25px;
        display: block;
        width: 25px;
        height: 25px;
        content: "";
        margin-right: 5px;
        float: left;
    }
}

dark-mode-toggle {
    --dark-mode-toggle-light-icon: url(/lib/img/moon.svg);
    --dark-mode-toggle-dark-icon: url(/lib/img/sun.svg);
    --dark-mode-toggle-icon-size: 25px;
}

.blinkers {
    @keyframes blink {
        0% {
            opacity: 0;
        }

        20% {
            opacity: 1;
        }

        100% {
            opacity: 0;
        }
    }

    span {
        margin-left: 2px;
        font-size: 20px;
        animation-name: blink !important;
        animation-duration: 1.5s !important;
        animation-iteration-count: infinite !important;
        animation-fill-mode: both !important;

        &:nth-child(2) {
            animation-delay: .2s !important;
        }

        &:nth-child(3) {
            animation-delay: .4s !important;
        }
    }
}

.page-footer {
    margin-top: 10px;
    // variable set by the theme.
    background-color: var(--bg-banner);

    .decorated-link {
        border-bottom: 1px dotted #00efd1;
    }

    .container {
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-gap: 0;

        a:hover {
            text-decoration: none;
        }

        a {
            img {
                width: auto;
                height: auto;

                &.logo {
                    margin-right: 25px;
                    height: 30px;
                    width: 30px;
                }

                &.cc-logo {
                    height: 30px;
                    width: 30px;
                    vertical-align: text-bottom;
                }
            }

            &:last-child {
                img.logo {
                    margin-right: 0px;
                }
            }
        }

        div {
            box-sizing: border-box;
            align-self: end;

            &:first-child {
                grid-column: span 12;
            }

            &:nth-child(2) {
                grid-column: span 6;
            }

            &:nth-child(3) {
                grid-column: span 6;
            }
        }
    }
}

.comments-icon {
    line-height: 50px;
    font-size: 1.2em;
    font-style: normal;

    &:before {
        background: url('/lib/img/comment.svg') center center no-repeat;
        background-size: 50px 50px;
        width: 50px;
        height: 50px;
        content: "";
        margin-right: 5px;
        float: left;
    }
}

// publication styles

@mixin publishing-icons($icon-link) {
    &:before {
        background: url($icon-link) center center no-repeat;
        background-size: 35px;
        width: 35px;
        height: 35px;
        content: "";
        margin-right: 5px;
        vertical-align: middle;
        display: inline-flex;
    }
}

.location-icon {
    @include publishing-icons('/lib/img/location.svg');
}

.work-icon {
    @include publishing-icons('/lib/img/work.svg');
}

.diary-icon {
    @include publishing-icons('/lib/img/diary.svg');
}

.pen-stand-icon {
    @include publishing-icons('/lib/img/pen-stand.svg');
}

.share-icon {
    @include publishing-icons('/lib/img/share.svg');
}

// publications and profile
.logo-bg {
    position: relative;
    z-index: 0;

    @media (min-width: #{$breakpoint-medium}) {
        &:before {
            content: "";
            position: absolute;
            z-index: -1;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            background: url('/lib/img/logo.svg') center center no-repeat;
            opacity: 0.1;
        }
    }
}

.publication-img {
    max-height: 400px;
}

.mobile-br {
    display: inline;

    @media (min-width: #{$breakpoint-medium}) {
        display: none;
    }
}

.go-top {
    position: fixed;
    bottom: 5px;
    right: 10px;
}

.subscription-footer {
    position: fixed;
    bottom: 5px;
    right: 50px;
}

// bug fix in template
.post-content {
    word-wrap: break-word;
    word-break: break-word;
}

html,
body {
    scroll-behavior: smooth;
}

